--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,43 +1,41 @@
 @use "./styles/variables.module.scss";
 
-.carousel {
-  background-color: variables.$secondary-bg;
-  font-weight: 600;
-  font-size: 0.7rem;
-  padding: 5px 0px;
+.header {
+  color: variables.$secondary-bg;
   display: flex;
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;
+  font-family: "Manufacturing Consent", system-ui;
+  padding: 8px 0px;
   justify-content: center;
-  color: variables.$primary-color;
+  background-color: variables.$primary-color;
 }
 
-.item {
-  animation: carousel 5s infinite;
+.title {
+  display: flex;
+  gap: 4px;
+  align-items: center;
+  transition: transform 0.2s;
+}
+
+.logo {
+  height: 45px;
+  width: 45px;
+}
+
+.title:hover {
+  transform: rotate(3deg) scale(1.1);
+}
+
+.titleText {
+  text-shadow: 1px 1px 2px black;
+  font-size: 2rem;
 }
 
 footer {
-  font-size: 0.8rem;
   padding: 15px 0px;
   border-top: 1px solid variables.$primary-bg;
   display: flex;
   justify-content: center;
   color: variables.$primary-bg;
-}
-
-@keyframes carousel {
-  0% {
-    opacity: 0;
-    transform: translateY(0px);
-  }
-  10% {
-    opacity: 1;
-    transform: translateY(0px);
-  }
-  90% {
-    opacity: 1;
-    transform: translateY(0px);
-  }
-  100% {
-    opacity: 0;
-    transform: translateY(-10px);
-  }
 }
