--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,16 @@
 body {
   margin: 0 auto;
-  max-width: 2000px;
+  max-width: 2400px;
   min-height: 100vh;
   line-height: 1.5;
   font-family: "Poppins", system-ui, Avenir, Helvetica, Arial, sans-serif;
   background-color: white;
+  overflow-x: hidden;
 }
 
 #root {
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 *,
@@ -102,7 +104,7 @@ h6 {
   z-index: 10;
   width: 100%;
   height: 100%;
-  stroke-width: 4px;
+  stroke-width: 5px;
   stroke: #ff0000;
   fill: none;
   stroke-dashoffset: calc(125.6px * (1 - var(--progress)));
