fix: refactor all carousel with swipper and added images as avif

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -39,3 +39,10 @@ footer {
   justify-content: center;
   color: variables.$primary-bg;
 }
+
+@media only screen and (max-width: 768px) {
+  .logo {
+    height: 35px;
+    width: 35px;
+  }
+}
