--- a/src/components/SocialMedia/SocialMedia.module.scss
+++ b/src/components/SocialMedia/SocialMedia.module.scss
@@ -13,3 +13,9 @@
 .item:hover {
   transform: scale(1.2);
 }
+
+@media only screen and (max-width: 992px) {
+  .list {
+    justify-content: center;
+  }
+}
