fix: add center in items

--- a/src/components/Payments/Payments.module.scss
+++ b/src/components/Payments/Payments.module.scss
@@ -5,3 +5,8 @@
   padding: 0px;
   list-style-type: none;
 }
+@media only screen and (max-width: 768px) {
+  .list {
+    justify-content: center;
+  }
+}
