--- a/src/components/PrimaryCarousel/PrimaryCarousel.module.scss
+++ b/src/components/PrimaryCarousel/PrimaryCarousel.module.scss
@@ -3,7 +3,7 @@
 .carousel {
   background-color: variables.$secondary-bg;
   width: 100%;
-  height: 90px;
+  height: 70px;
   display: flex;
   align-items: center;
   overflow: hidden;
@@ -14,7 +14,8 @@
 .item {
   position: absolute;
   width: 300px;
-  font-weight: 800;
+  font-weight: 900;
+  text-shadow: 1px 1px 2px black;
   font-size: 1.5rem;
   left: calc(400px * 7);
   animation: scrollLeft 30s linear infinite;
