--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -2,7 +2,6 @@
 
 .img {
   object-fit: cover;
-  aspect-ratio: 2/1;
 }
 
 .content {
@@ -13,70 +12,69 @@
   color: variables.$primary-bg;
 }
 
-.mySwiper {
-  position: relative;
+.swiper {
+  height: 65vh;
   width: 100%;
 }
 
-.mySliders {
+.slider {
+  height: 100%;
+}
+
+.textSlider {
+  position: absolute;
+  z-index: 40;
+  color: white;
+  font-size: 1.8rem;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  background: white;
-  position: relative;
-  max-height: 850px !important;
+  text-shadow: 1px 1px 2px black;
+}
 
-  .textSlider {
-    position: absolute;
-    z-index: 40;
-    color: white;
-    font-size: 2rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-shadow: 1px 1px 2px black;
+.positionCenter {
+  left: 0;
+  right: 0;
+  bottom: 60px;
+  margin-inline: auto;
+  display: flex;
+  flex-direction: column;
+}
 
-    .textTitle {
-      font-weight: 900;
-    }
+.positionLeft {
+  left: 60px;
+  bottom: 60px;
+  margin-inline: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  text-align: left;
+}
 
-    .textPara {
-      font-size: 1.5rem;
-      font-weight: 600;
-      margin-bottom: 20px;
-    }
-  }
+.img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
-  .textSlider1,
-  .textSlider2 {
-    left: 0;
-    right: 0;
-    bottom: 60px;
-    margin-inline: auto;
-    display: flex;
-    flex-direction: column;
-  }
+.title {
+  font-weight: 900;
+}
 
-  .textSlider3 {
-    left: 60px;
-    bottom: 60px;
-    margin-inline: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    text-align: left;
-  }
+.paragraph {
+  margin-bottom: 20px;
+  font-weight: 500;
 }
 
 .button {
   cursor: pointer;
   background-color: transparent;
   font-size: 1.5rem;
-  font-weight: 800;
+  font-weight: 600;
   border: none;
   color: variables.$primary-color;
-  padding: 5px 40px;
-  border-radius: 10px;
+  padding: 5px 35px;
+  border-radius: 15px;
   transition: all 0.2s;
   background-color: variables.$secondary-bg;
   margin-bottom: 20px;
@@ -140,9 +138,6 @@
   }
 }
 @media only screen and (max-width: 768px) {
-  .img {
-    aspect-ratio: 2/3;
-  }
   .button {
     font-size: 1.2rem;
   }
@@ -155,23 +150,10 @@
 }
 
 @media only screen and (max-width: 992px) {
-  .mySliders {
-    .textSlider {
-      font-size: 1.5rem;
-      .textPara {
-        font-size: 1.1rem;
-      }
-    }
-    .textSlider1,
-    .textSlider2 {
-      bottom: 30px;
-    }
-
-    .textSlider3 {
-      left: 25px;
-      bottom: 30px;
-    }
+  .textSlider {
+    font-size: 1.1rem;
   }
+
   .end {
     justify-content: center;
     gap: 40px;
