--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -41,16 +41,6 @@
   flex-direction: column;
 }
 
-.positionLeft {
-  left: 60px;
-  bottom: 60px;
-  margin-inline: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  text-align: left;
-}
-
 .img {
   width: 100%;
   height: 100%;
@@ -64,24 +54,6 @@
 .paragraph {
   margin-bottom: 20px;
   font-weight: 500;
-}
-
-.button {
-  cursor: pointer;
-  background-color: transparent;
-  font-size: 1.5rem;
-  font-weight: 600;
-  border: none;
-  color: variables.$primary-color;
-  padding: 5px 35px;
-  border-radius: 15px;
-  transition: all 0.2s;
-  background-color: variables.$secondary-bg;
-  margin-bottom: 20px;
-}
-
-.button:hover {
-  transform: scale(1.1);
 }
 
 .input {
@@ -129,6 +101,10 @@
   font-weight: bold;
 }
 
+.underline {
+  text-decoration: underline;
+}
+
 @media screen and (max-width: 1560px) {
   .end {
     gap: 80px;
@@ -138,10 +114,6 @@
   }
 }
 @media only screen and (max-width: 768px) {
-  .button {
-    font-size: 1.2rem;
-  }
-
   .input {
     padding: 8px;
     padding-left: 20px;
