feat: add apis and some assets change the path

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -13,6 +13,7 @@
   background-color: variables.$secondary-bg;
   margin-bottom: 20px;
   text-decoration: none;
+  text-align: center;
 }
 
 .link:hover {
