--- a/src/pages/AppLayout/AppLayout.module.scss
+++ b/src/pages/AppLayout/AppLayout.module.scss
@@ -1,24 +1,28 @@
 @use "../../styles/variables.module.scss";
 
 .header {
+  display: flex;
+  align-items: center;
   color: variables.$secondary-bg;
-  display: grid;
-  grid-template-columns: 1fr auto 1fr;
   border-top: 2px solid white;
-  border-bottom: 2px solid white;
+  border-bottom: 1px solid #ccc;
   font-family: "Manufacturing Consent", system-ui;
-  padding: 8px 0px;
+  padding: 15px 0px;
   justify-content: center;
   background-color: variables.$primary-color;
-  box-shadow: 1px 1px 2px #ccc;
+  position: sticky;
+  top: 0;
+  z-index: 999;
 }
 
 .title {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
   gap: 2px;
   align-items: center;
   transition: transform 0.2s;
-  text-shadow: 1px 1px 2px black;
   font-size: 2rem;
   border: none;
   background-color: white;
@@ -31,7 +35,7 @@
 }
 
 .title:hover {
-  transform: rotate(3deg) scale(1.1);
+  transform: translateX(-50%) rotate(-4deg);
 }
 
 .logo {
@@ -60,9 +64,29 @@
   color: variables.$secondary-bg;
 }
 
+.icons {
+  display: flex;
+  margin-left: auto;
+  gap: 10px;
+}
+
+.notDisplay {
+  display: none;
+}
+
+.spinner {
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 footer {
   padding: 15px 0px;
-  border-top: 1px solid variables.$primary-bg;
+  border-top: 1px solid #ccc;
   display: flex;
   justify-content: center;
   color: variables.$primary-bg;
