--- a/src/pages/Store/Store.module.scss
+++ b/src/pages/Store/Store.module.scss
@@ -1,25 +1,123 @@
+@use "../../styles/variables.module.scss";
+
 .main {
   display: grid;
-  grid-template-columns: 200px 1fr 200px;
+  grid-template-rows: auto 1fr;
+  grid-template-columns: 150px 1fr 150px;
   min-height: 100vh;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.form {
+  grid-row: 1;
+  grid-column: 2 / 3;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+
+.searchIcon {
+  position: absolute;
+  left: 32px;
+  top: 28px;
+}
+
+.input {
+  width: 100%;
+  padding: 5px;
+  padding-left: 35px;
+  border-radius: 20px;
+  border: 2px solid variables.$primary-border;
+}
+
+.input:focus {
+  border: 2px solid variables.$secondary-bg;
+  outline: none;
 }
 
 .left,
 .right {
-  padding: 12px;
+  padding-top: 20px;
   font-size: 0.9rem;
 }
 
 .left {
-  background-color: rgba(0, 0, 0, 0.269);
+  padding-left: 20px;
+  grid-row: 1 / 4;
 }
 
 .right {
-  background-color: rgba(0, 0, 255, 0.511);
+  padding-right: 20px;
+  grid-row: 1 / 4;
+  grid-column: 3 / 4;
 }
 
 .products {
-  background-color: rgba(255, 0, 0, 0.453);
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  gap: 20px;
+  padding: 20px;
+  padding-top: 0px;
+}
+
+.product {
+  border-radius: 10px;
+  overflow: hidden;
+  border: 1px solid variables.$primary-border;
+  box-shadow: 1px 1px 1px variables.$primary-border;
+  position: relative;
+}
+
+.notProduct {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.underline {
+  text-decoration: underline;
+}
+
+.productText {
+  position: absolute;
+  color: variables.$primary-bg;
+  z-index: 20;
+  bottom: 15px;
+  left: 10px;
+  border: 1px solid variables.$primary-border;
+  padding: 3px 10px;
+  padding-right: 5px;
+  border-radius: 30px;
+  background-color: variables.$primary-color;
+  font-weight: 500;
+}
+
+.productPara {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+}
+
+.product:hover {
+  border: 2px solid variables.$secondary-bg;
+}
+
+.price {
+  background-color: variables.$secondary-bg;
+  color: variables.$primary-color;
+  padding: 3px 10px;
+  border-radius: 99px;
+}
+
+.image {
+  object-fit: cover;
+  transition: 0.3s all;
+}
+
+.image:hover {
+  transform: scale(1.1);
 }
 
 .list {
@@ -31,17 +129,74 @@
 }
 
 .listTitle {
-  color: #3333338a;
+  color: variables.$primary-subtitle;
   font-weight: 600;
   margin-bottom: 10px;
 }
 
 .link {
+  display: inline-block;
   color: black;
   text-decoration: none;
+  transition: 0.2s all;
+  text-decoration-color: variables.$secondary-bg;
+}
+
+.linkActive {
+  @extend .link;
+  text-decoration: underline;
+  text-decoration-color: variables.$secondary-bg;
+  text-decoration-thickness: 2px;
 }
 
 .link:hover {
   text-decoration: underline;
+  text-decoration-color: variables.$secondary-bg;
   text-decoration-thickness: 2px;
+  transform: rotate(-4deg);
+}
+@media only screen and (max-width: 992px) {
+  .products {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+@media only screen and (max-width: 768px) {
+  .products {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+    padding-top: 20px;
+  }
+
+  .main {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 5px;
+  }
+  .form {
+    grid-row: 1;
+    grid-column: 1;
+    padding-bottom: 0px;
+  }
+
+  .left,
+  .right {
+    grid-column: 1;
+  }
+
+  .left {
+    order: 0;
+    grid-row: 2 / 3;
+  }
+  .right {
+    grid-row: 3 / 4;
+  }
+
+  .left,
+  .right {
+    padding-top: 10px;
+    padding-left: 20px;
+  }
+
+  .listTitle {
+    margin-bottom: 5px;
+  }
 }
