--- a/src/components/Linki/Linki.module.scss
+++ b/src/components/Linki/Linki.module.scss
@@ -3,7 +3,7 @@
 .link {
   cursor: pointer;
   background-color: transparent;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: 600;
   border: none;
   color: variables.$primary-color;
@@ -24,6 +24,7 @@
   @extend .link;
   cursor: not-allowed;
   opacity: 0.6;
+  pointer-events: none;
 }
 
 .disabled:hover {
@@ -32,6 +33,6 @@
 
 @media only screen and (max-width: 768px) {
   .link {
-    font-size: 1rem;
+    font-size: 1.2rem;
   }
 }
