--- a/src/pages/AppLayout/AppLayout.module.scss
+++ b/src/pages/AppLayout/AppLayout.module.scss
@@ -13,6 +13,7 @@
   position: sticky;
   top: 0;
   z-index: 999;
+  align-items: center;
 }
 
 .title {
@@ -54,10 +55,26 @@
   display: flex;
   align-items: center;
   transition: 0.2s transform;
+  text-decoration: none;
+  position: relative;
 }
 
-.cart:hover {
-  transform: scale(1.2);
+.quantity {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: variables.$secondary-bg;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  color: white;
+  font-size: 0.5rem;
+  font-weight: 600;
+  top: -5px;
+  left: 18px;
+  font-family: Poppins, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .cartIcon {
@@ -100,5 +117,11 @@ footer {
   }
   .cart {
     margin-right: 15px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .textTitle {
+    display: none;
   }
 }
