--- a/src/styles/variables.module.scss
+++ b/src/styles/variables.module.scss
@@ -3,3 +3,4 @@ $secondary-bg: #ff0000;
 $primary-color: white;
 $primary-border: #c2c2c2dd;
 $primary-subtitle: #a4a4a4;
+$secondary-border: #ff00008d;
