--- a/src/pages/Product/Product.module.scss
+++ b/src/pages/Product/Product.module.scss
@@ -227,7 +227,7 @@
 }
 
 .notification {
-  position: absolute;
+  position: fixed;
   width: 200px;
   height: 60px;
   padding: 10px;
@@ -238,7 +238,7 @@
   background-color: variables.$secondary-bg; /* green */
   color: white;
   right: 20px;
-  top: 5px;
+  top: 100px;
   font-size: 0.7rem;
   display: flex;
   gap: 10px;
