fix: couple of things in colors, images and og image

--- a/src/pages/Store/Store.module.scss
+++ b/src/pages/Store/Store.module.scss
@@ -30,6 +30,7 @@
   padding-left: 35px;
   border-radius: 20px;
   border: 2px solid variables.$primary-border;
+  background-color: white;
 }
 
 .input:focus {
