--- a/src/pages/AppLayout/AppLayout.module.scss
+++ b/src/pages/AppLayout/AppLayout.module.scss
@@ -6,7 +6,7 @@
   color: variables.$secondary-bg;
   border-top: 2px solid white;
   border-bottom: 1px solid #ccc;
-  font-family: "Manufacturing Consent", system-ui;
+  font-family: "Alfa Slab One", system-ui;
   padding: 15px 0px;
   justify-content: center;
   background-color: variables.$primary-color;
@@ -24,12 +24,11 @@
   gap: 2px;
   align-items: center;
   transition: transform 0.2s;
-  font-size: 2rem;
   border: none;
   background-color: white;
   cursor: pointer;
   color: variables.$secondary-bg;
-  font-size: 1.7rem;
+  font-size: 1.5rem;
   font-weight: 800;
   text-decoration: none;
   grid-column: 2;
