fix: issue with button disabled

--- a/src/pages/Product/Product.module.scss
+++ b/src/pages/Product/Product.module.scss
@@ -283,8 +283,8 @@
 
 .disabled {
   @extend .button;
-  cursor: not-allowed;
-  opacity: 0.6;
+  opacity: 0.4;
+  pointer-events: none;
 }
 
 .disabled:hover {
